FIX: too much italic

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -24,7 +24,6 @@ a:active,
 a.active {
     outline: 0;
     color: #{{ site.color.secondary-dark }};
-    font-style: italic;
 }
 
 h1,
